--- a/MiPrimerMVC/Web.config
+++ b/MiPrimerMVC/Web.config
@@ -8,7 +8,7 @@
     <section name="botDetect" requirePermission="false" type="BotDetect.Configuration.BotDetectConfigurationSection, BotDetect" />
   </configSections>
   <appSettings>
-    <add key="Environment" value="local" />
+    <add key="Environment" value="remote" />
     <add key="current_session_context_class" value="thread_static" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
